// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check firebase config 1`] = `
Object {
  "apiKey": undefined,
  "appId": "1:641332133381:web:77c83f2ffc96f51d7da66c",
  "authDomain": "reallyluis-13b43.firebaseapp.com",
  "databaseURL": "https://reallyluis-13b43.firebaseio.com",
  "messagingSenderId": "641332133381",
  "projectId": "reallyluis-13b43",
  "storageBucket": "reallyluis-13b43.appspot.com",
}
`;

exports[`contact form events update contact form on submit 1`] = `
<body
  class=""
>
  <form
    class="contact-me__form"
    id="contact"
  >
      
    <label
      for="name"
    >
          Name:  
    </label>
      
    <input
      id="name"
      name="name"
      required=""
      type="text"
      value=""
    />
      
    <label
      for="email"
    >
          Email:  
    </label>
      
    <input
      id="email"
      name="email"
      required=""
      type="text"
      value=""
    />
      
    <label
      for="comment"
    >
          Comment:  
    </label>
      
    <textarea
      cols="30"
      id="comment"
      name="comment"
      required=""
      rows="5"
    >
        
    </textarea>
      
    <button
      id="contact-submit"
      type="submit"
    >
      Send
    </button>
  </form>
  <div
    class="contact-me__success hide"
  >
      
    <p>
      <b>
        Thanks!
      </b>
        Your message was sent successfully.
    </p>
  </div>
</body>
`;

exports[`navigation events update body class on nav clicked 1`] = `
<body
  class=""
>
  <button
    class="nav-toggle"
  />
  <nav
    class="nav"
  >
      
    <ul
      class="nav__list"
    >
          
      <li
        class="nav__item"
      >
             
        <a
          class="nav__link"
          href="#one"
        >
          one
        </a>
      </li>
        
    </ul>
  </nav>
</body>
`;

exports[`navigation events update body class on nav toggled 1`] = `
<body
  class="nav-open"
>
  <button
    class="nav-toggle"
  />
  <nav
    class="nav"
  >
      
    <ul
      class="nav__list"
    >
          
      <li
        class="nav__item"
      >
             
        <a
          class="nav__link"
          href="#one"
        >
          one
        </a>
      </li>
        
    </ul>
  </nav>
</body>
`;

exports[`scroll events update after scroll greater than 75% of view 1`] = `
<body
  class="scrolled"
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment animate-out"
    >
       
    </div>
  </div>
</body>
`;

exports[`scroll events update after scroll greater than 100 1`] = `
<body
  class="scrolled"
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment"
    >
       
    </div>
  </div>
</body>
`;

exports[`scroll events update after scroll less than 100 1`] = `
<body
  class=""
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment"
    >
       
    </div>
  </div>
</body>
`;
